Fix navbar-brand display on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@
   }
 
   .display-2 {
-    font-size: 1.25rem;
+    font-size: 2rem;
     font-weight: 300;
     line-height: 1;
   }
@@ -42,13 +42,18 @@
   }
 
   .display-4 {
-    font-size: 1rem;
+    font-size: 1.75rem;
     font-weight: 300;
     line-height: 1;
   }
 
   /* Fix space between navbar and jumbotron on mobile */
   .container-fluid {
-    margin-top: 50px;
+    margin-top: 60px;
+  }
+
+  .navbar-brand {
+    width: 25%;
+    font-size: 1rem;;
   }
 }
